# wcagify

./: .gitignore  .oxfmtrc.json  CLAUDE.md  Dockerfile  LICENSE  content.config.ts  knip.json  nuxt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  vercel.json
.github/workflows/: ci.yml  e2e-tests.yml  release.yml
.husky/: pre-commit
app/: app.vue
app/assets/css/: main.css  print.css
app/components/: AppLogo.vue  LocaleSwitcher.vue  ReportCard.vue  ReportCoverPage.vue  ReportHeader.vue  ReportIssue.vue  ReportSample.vue  ReportScope.vue  ReportScorecard.vue
app/composables/: useWcagData.ts
app/data/wcag/: sc-to-slug.json  totals-per-level.json
app/pages/: index.vue
docs/: package.json  rfc-collection-relations.md
docs/.vitepress/: config.mts
docs/guide/: getting-started.md  issues.md  reports.md
docs/legal/: privacy-policy.md  security-policy.md  terms-and-conditions.md
docs/reference/: configuration.md
i18n/locales/: en.json  nl.json
playground/: .env.example  content.config.ts  nuxt.config.ts  package.json  vercel.json
playground/app/: app.vue
test/e2e/: browser.e2e.test.ts  package-managers.e2e.test.ts  scaffolding.e2e.test.ts  share.e2e.test.ts  upload.e2e.test.ts  vitest.config.ts
test/robot/: .gitignore  README.md  pyproject.toml  requirements.txt
test/robot/resources/: api.resource  common.resource
test/robot/scripts/: run.sh  setup.sh
test/robot/tests/: 01_playground_loads_with_extension.robot  02_extension_api_contract.robot  03_extension_to_app_round_trip.robot
(+42 files in other folders)
